--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,30 @@ nav ul li a {
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 5px;
+  font-weight: bold;
 }
 
 nav ul li a:hover {
   background-color: #0e5514;
+}
+
+#name {
+  font-weight: bold;
+  font-size: 35px;
+  text-decoration: underline;
+}
+
+#logo {
+  width: 120px;
+  height: 120px;
+  margin: 0%;
+  display: flex;
+}
+
+#cabecera {
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 img {
