--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ nav ul li a:hover {
   font-weight: bold;
   font-size: 35px;
   text-decoration: underline;
+  margin-left: 5px;
 }
 
 #logo {
@@ -61,8 +62,7 @@ img {
 }
 
 body {
-  background-color: #4a8645;
-  color: #333;
+  color: black;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -86,7 +86,7 @@ footer {
   padding: 20px 0;
 }
 
-.footer-content {
+footer div {
   margin: 0 auto;
   text-align: center;
 }
