--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,20 @@ nav ul li a:hover {
   height: 120px;
   margin: 0%;
   display: flex;
+  animation: animate 0.6s linear infinite;
+  border: 3px solid #054e0b;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(-15deg) scale(1.07);
+  }
+  80% {
+    transform: rotate(-5deg) scale(1);
+  }
+  100% {
+    transform: rotate(0deg) scale(0.8);
+  }
 }
 
 #cabecera {
